# say-gm

./: .eslintrc.js  database.sql  middleware.ts  middlewaree.ts  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
app/: layout.tsx  not-found.tsx  providers.tsx
app/dashboard/: layout.tsx  page.tsx
app/drops/: page.tsx
app/home/: layout.tsx  page.tsx
app/memberships/: page.tsx
app/my-supporters/: page.tsx
app/posts/: layout.tsx  page.tsx
app/settings/: page.tsx
app/shop/: page.tsx
app/sites/: layout.tsx
components/: avatar-uploader.tsx  coming-soon.tsx  demo.tsx  gm-logo.tsx  login.tsx  provider.tsx
config/: dashboard.ts  donation.ts  routes.ts  site.ts
hooks/: use-creator-posts.ts  use-donations.ts  use-drops.tsx  use-feed.ts  use-get-nfts-by-owner.ts  use-gum-sdk.ts  use-membership-tiers.ts  use-memberships.ts  use-my-posts.ts
lib/: arweave.ts  gum.ts  shyft.ts  signin-message.ts  solana.ts  supabase.ts  utils.ts
pages/api/: og.tsx
program/: Anchor.toml  generate-sdk.js  package.json
program/programs/demo-anchor/: Cargo.toml
program/programs/demo-anchor/src/: assertions.rs  constants.rs  errors.rs  lib.rs  utils.rs
program/programs/demo-anchor/src/intructions/: donation.rs  membership.rs  mod.rs  post.rs  profile.rs  tree.rs
program/programs/demo-anchor/src/state/: donation.rs  membership.rs  mod.rs  post.rs  profile.rs  tree.rs
styles/: globals.css
types/: next-auth.d.ts  supabase.types.ts
utils/: common.ts  constants.ts  currency.ts  env.ts  explorer.ts  meta.ts  parse-middleware.ts  pyth.ts  sessionManager.ts
(+81 files in other folders)
